# quineformer

./: .gitignore  README.md  pyproject.toml
experiments/bias_absorption/: Experiment_v1.md  Experiment_v2.md  plot_activation_mse.py  plot_perplexity_comparison.py  run_v1.py  run_v1_min.py  run_v2.py
experiments/canonicalization/: Experiment_v1.md  Experiment_v2.md  canonicalization_rollout_curriculum.md  check_perplexity.py  evaluate_checkpoints.py  experiment_v1.md  experiment_v2.md  experiment_v3.md  explore.ipynb  head_local_gauge_fixer.md  plot_evals.py  rotation_symmetry_equivalence.md  run_v1.py  run_v2.py  run_v3.py  soft_to_hard_sharpness_note.md  verify_rotation_symmetry_equivalence.py
quineformer/: __init__.py  bias_absorption.py  canonicalization.py  experiment_utils.py  rotation_symmetry.py  serialization.py
scripts/: download_multiberts.py  generate_canonicalization_v2_activation_dataset.py
tests/: test_bias_absorption.py  test_canonicalization.py  test_canonicalization_run_v2.py  test_experiment_utils.py  test_rotation_symmetry.py  test_serialization.py
