[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "quineformer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv",
    "scipy",
    "torch",
    "transformers",
    "wandb",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quineformer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
